--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-krbcontext >= 0.3.3
+#krbcontext >= 0.3.3
 requests >= 2.7.0
 requests-kerberos >= 0.7.0
 pycurl >= 7.19.0
-kerberos >= 1.1.1
+#kerberos >= 1.1.1
+-e git+https://github.com/requests/requests-kerberos.git#egg=kerberos
+pykerberos >= 1.1.8
 urllib3 >= 1.11
 argparse >= 1.2.1
 pyyaml >= 3.11
